--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
         "@angular/platform-browser": "~8.2.0",
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
+        "@fortawesome/fontawesome-free": "^5.10.2",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.1.4",
-        "genese-angular": "0.0.9",
+        "genese-angular": "0.0.17",
         "hammerjs": "^2.0.8",
         "ionicons": "^4.6.2",
         "moment": "^2.24.0",
