--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
+        "genese-api": "node node_modules/genese-api/index.js",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -36,6 +37,7 @@
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.6.4",
         "genese-angular": "^1.1.10",
+        "genese-api": "0.0.7",
         "hammerjs": "^2.0.8",
         "ionicons": "^4.6.3",
         "moment": "^2.24.0",
