--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "@ngx-translate/http-loader": "^4.0.0",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.6.4",
-        "genese-angular": "^1.1.10",
         "genese-api": "0.0.7",
+        "genese-mapper": "^1.0.6",
         "hammerjs": "^2.0.8",
         "ionicons": "^4.6.3",
         "moment": "^2.24.0",
